# mcp-server-conquest

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  server.py
conquest/army_builder/: create_army_builder_json.py  get_army_entry.py  schemas.py
conquest/core/: config.py  get_directive_for_game.py  get_faction_for_game.py  get_faction_options_for_game.py  get_games_and_factions.py  mcp.py  schemas.py
tests/core/: test_get_faction_for_game.py  test_get_games_and_factions.py
